--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 </header>
 <main class="wrapper">
-    <video class="video" loop muted autoplay="autoplay">
+    <video class="video" playsinline loop muted autoplay="autoplay">
         <source src="img/test.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
     </video>
     <a href="#directions"><img src="img/down_arrow.svg" alt="" class="scroll--arrow"></a>
