--- a/index.html
+++ b/index.html
@@ -23,6 +23,30 @@
         <div class="phone">
             <img src="img/phone.svg" alt="" class="phone__icon">
             <a href="tel: +7(960)106-17-93" class="phone__number">+7 (960) 106 17 93</a>
+            <div class="burger">
+                <span></span>
+            </div>
+        </div>
+        <div class="mobile">
+            <div class="mobile__nav">
+                <nav class="nav">
+                    <a href="#history" class="nav__item nav__history">О нас</a>
+                    <a href="#directions" class="nav__item">Направления</a>
+                    <a href="#coach" class="nav__item">Тренеры</a>
+                    <a href="" class="nav__item">Фотогалерея</a>
+                    <a href="#footer" class="nav__item">Адрес</a>
+                </nav>
+                <div class="footer__info-bot">
+                    <p class="footer__info-name">Садчиков Павел Валерьевич - Руководитель ТСК "Агон"</p>
+                    <div class="footer__info-contacts">
+                        <div class="contacts__bot">
+                            <img src="img/phone.svg" alt="" class="contacts__bot-icon">
+                            <a href="tel: +7(960)106-17-93" class="contacts__bot-phone">+7 (960) 106 17 93</a>
+                        </div>
+                        <a href="https://vk.com/agon_dance" class="contacts__vk"><img src="img/vk.svg" alt="" class="contacts__vk-icon"></a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </header>
