nav fix + video

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </header>
 <main class="wrapper">
     <video class="video" playsinline loop muted autoplay="autoplay">
-        <source src="img/test.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+        <source src="img/agon.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
     </video>
     <a href="#directions"><img src="img/down_arrow.svg" alt="" class="scroll--arrow"></a>
 </main>
